# fs25-savegame-mover

./: .gitignore  FS25SavegameMover.spec  LICENSE  README.md  launcher.py  pyproject.toml
src/fs25_mover/: __main__.py
src/fs25_mover/migrate/: animals.py  engine.py  ids.py  items.py  mod_files.py  mods_list.py  money.py  object_storage.py  placeables.py  silage_sale.py  silos.py  vehicles.py
src/fs25_mover/model/: farm.py  migration_plan.py  poi.py
src/fs25_mover/parsers/: dds.py  fs25_root.py  i3d.py  map_zip.py  mod_files.py  savegame.py
src/fs25_mover/ui/: pda_view.py  pda_window.py  theme.py  wizard.py
src/fs25_mover/ui/pages/: assign.py  modfiles.py  review.py  run.py  setup.py  source.py  target.py  welcome.py
src/fs25_mover/util/: config.py  paths.py
