[project]
name = "fs25-savegame-mover"
version = "0.1.0"
description = "Migrate a Farming Simulator 25 farm (vehicles, grains, animals, bales, money) from one map to another via a PDA-styled GUI."
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "PySide6>=6.6",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fs25-mover = "fs25_mover.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
